Tweaked display logic for card effects to avoid overlapping zones

--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,7 @@ button, input {
 }
 
 .inexhaustible-effects {
-  @apply bg-inexhaustible border border-inexhaustible-dark px-2 relative;
+  @apply bg-inexhaustible border border-inexhaustible-dark px-2 relative clear-both;
   padding-top: 1px;
   padding-bottom: 1px;
 }
@@ -115,7 +115,7 @@ button, input {
 }
 
 .reaction-effects {
-  @apply bg-reaction border border-reaction-dark px-2 relative;
+  @apply bg-reaction border border-reaction-dark px-2 relative clear-both;
   padding-top: 1px;
   padding-bottom: 1px;
 }
